# langgraph-tutorial

./: 10_Generator_Evaluator.ipynb  1_basics.ipynb  2_pyDantic.ipynb  3_message.ipynb  4_prompts.ipynb  5_tools.ipynb  7_parllelization.ipynb  8_Router.ipynb  9_Orchestrator.ipynb  practice.ipynb  pyproject.toml
